--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
                   })
                   
                   $("#now-ok").click(function(){
-                      alert("click") ;
+//                      alert("click") ;
+                      $("#loc-dest").val("") ;
                       $("#dest").show("slow") ;
                   })
                   
